maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: ';' expected but '=' found.
  (x,y) = findBaggle(xMax,yMax);
        ^